# unisimple_mail

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  backend.Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt  run_pipeline_optimization.py  test.json  test_amo.py  unisimple  unisimple.pub
mail/: mail_connector.py
mail/data/: Победители закупок 11.03.2025 1400.xlsx  Победители закупок 11.03.2025 1500.xlsx  Победители закупок 11.03.2025 1600.xlsx  Победители закупок 11.03.2025 1700.xlsx  Победители закупок 11.03.2025 1800.xlsx  Победители закупок 11.03.2025 1900.xlsx  Победители закупок 11.03.2025 2000.xlsx  Победители закупок 11.03.2025 2100.xlsx  Победители закупок 11.03.2025 2200.xlsx  Победители закупок 11.03.2025 2300.xlsx  Победители закупок 12.03.2025 0000.xlsx  Победители закупок 12.03.2025 0100.xlsx  Победители закупок 12.03.2025 0400.xlsx  Победители закупок 12.03.2025 0500.xlsx  Победители закупок 12.03.2025 0600.xlsx  Победители закупок 12.03.2025 0700.xlsx  Победители закупок 12.03.2025 0800.xlsx  Победители закупок 12.03.2025 0900.xlsx  Победители закупок 12.03.2025 1000.xlsx
src/amo/: client.py  schemas.py
src/db/: abc.py
src/db/init_scripts/: init.sql
src/db/postgres/: __init__.py  db.py
src/mail/: file_parser.py  mail_connector.py
src/processing/: amocrm_processor.py
src/services/: amo_pipeline_services.py
src/settings/: __init__.py  enums.py
src/utils/: http_client.py
