[project]
name = "unisimple-mail"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "click==8.1.8",
    "dotenv==0.9.9",
    "exceptiongroup==1.2.2",
    "fastapi==0.115.12",
    "h11==0.14.0",
    "idna==3.10",
    "pydantic-core==2.33.1",
    "pydantic[email]==2.11.3",
    "python-dotenv==1.1.0",
    "sniffio==1.3.1",
    "starlette==0.46.2",
    "typing-inspection==0.4.0",
    "typing-extensions==4.13.2",
    "uvicorn==0.34.1",
    "aiohttp[speedups]>=3.11.18",
    "pydantic-settings>=2.9.1",
    "aiolimiter>=1.2.1",
    "pandas>=2.2.3",
    "openpyxl>=3.1.5",
    "aiopg>=1.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "setuptools>=79.0.0",
    "wheel>=0.45.1",
]
